--- a/.github/workflows/generate-site.yml
+++ b/.github/workflows/generate-site.yml
@@ -5,7 +5,8 @@ on:
     paths:
       - 'data/content.json'
       - 'templates/**'
-      - '.github/workflows/**'
+      - 'scripts/**'
+    branches: [main, master]
   workflow_dispatch:
 
 jobs:
@@ -23,22 +24,23 @@ jobs:
       with:
         python-version: '3.11'
         
-    - name: Installer les dépendances
+    - name: Installer dépendances
       run: pip install jinja2
       
-    - name: Générer le HTML
-      # Ici on force le script à écrire dans le dossier docs
-      run: |
-        mkdir -p docs
-        python scripts/generate-html.py
+    - name: Générer le site
+      run: python scripts/generate-html.py
       
-    - name: Vérifier la cohérence
-      run: python scripts/validate-data.py
-        
-    - name: Commit et push du fichier généré
+    - name: Configurer Git
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        # On ajoute le fichier dans le dossier docs
+        
+    - name: Commit et push
+      run: |
         git add docs/index.html
-        git diff --staged --quiet || (git commit -m "🤖 Mise à jour automatique du site (docs) - $(date)" && git push)
+        if git diff --staged --quiet; then
+          echo "Pas de changements à committer"
+        else
+          git commit -m "🤖 Auto: Mise à jour du site - $(date +'%Y-%m-%d %H:%M')"
+          git push
+        fi
